# ur_gui

./: CMakeCache.txt  CMakeLists.txt  README.md  package.xml
src/: cam.py  mobile_manipulator.py  ur.py  ur_gui.ui  ur_gui_node.py
