<?xml version="1.0"?>
<package format="2">
  <name>ur_gui</name>
  <version>0.0.0</version>
  <description>The ur_gui package</description>

  <maintainer email="hri@todo.todo">hri</maintainer>

<license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>

  </export>
</package>
